Entity Framework Core Addition - Recrod Insert

--- a/DynamicObjects/Views/Home/Index.cshtml
+++ b/DynamicObjects/Views/Home/Index.cshtml
@@ -6,12 +6,12 @@
     <div class="col-md-1"></div>
     <div class="col-md-5">
         <div class="form-group">
-            <label class="control-label">Group</label>
-            @Html.DropDownList("group-name", new List<SelectListItem>
+            <label class="control-label">Service</label>
+            @Html.DropDownList("service-name", new List<SelectListItem>
             {
-                new SelectListItem {Text = "Group1", Value="Group1"  },
-                new SelectListItem {Text = "Group2", Value="Group2"  },
-                new SelectListItem {Text = "Group3", Value="Group3"  },
+                new SelectListItem {Text = "Service1", Value="Service1"  },
+                new SelectListItem {Text = "Service2", Value="Service2"  },
+                new SelectListItem {Text = "Service3", Value="Service3"  },
 
             }, new { @class = "form-control" })
         </div>
@@ -62,13 +62,13 @@
     </div>
 </div>
 @*<div class="row">
-    <div class="col-md-10"></div>
-    <div class="col-md-2">
-        <button class="btn btn-success btn-sm" id="btn-add-row">
-            <span class="glyphicon glyphicon-save"></span> + Add
-        </button>
-    </div>
-</div>*@
+        <div class="col-md-10"></div>
+        <div class="col-md-2">
+            <button class="btn btn-success btn-sm" id="btn-add-row">
+                <span class="glyphicon glyphicon-save"></span> + Add
+            </button>
+        </div>
+    </div>*@
 <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-2">
@@ -118,7 +118,7 @@
             });
             var inputJSON =
             {
-                Group: $('#group-name option:selected').text(),//$('#group-name').val(),
+                Service: $('#service-name option:selected').text(),//$('#group-name').val(),
                 Page: $('#page-name').val(),
                 FieldsDetailViewModel: tableArray
             }
@@ -153,7 +153,7 @@
     });
 </script>
 <style>
-    .table th, .table td{
-        padding:4px 0 0 15px;
-    }    
+    .table th, .table td {
+        padding: 4px 0 0 15px;
+    }
 </style>
