--- a/DynamicObjects/Views/User/Index.cshtml
+++ b/DynamicObjects/Views/User/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model DynamicObjects.Models.UserViewModel
+﻿@model DynamicObjects.Models.User.UserViewModel
 @{
     ViewData["Title"] = "Login";
 }
