--- a/DynamicObjects/Views/Referral/Service1Referral.cshtml
+++ b/DynamicObjects/Views/Referral/Service1Referral.cshtml
@@ -1,4 +1,4 @@
-@model DynamicObjects.Models.Referral.Group2ReferralViewModel
+@model DynamicObjects.Models.Referral.Service1ReferralViewModel
 @{ 
  ViewData["Title"] = "Referral";
 }
@@ -6,7 +6,7 @@
 <div class=row>
 <div class="col-md-4"></div>
 		<div class=col-md-4>
-			<form asp-action=Group2Referral>
+			<form asp-action=Service1Referral>
 				<div asp-validation-summary=ModelOnly class=text-danger></div>
 				<div class=form-group>
 					<label asp-for=FirstName class=control-label></label>
@@ -14,19 +14,14 @@
 					<span asp-validation-for=FirstName class=text-danger></span>
 				</div>
 				<div class=form-group>
-					<label asp-for=MiddleName class=control-label></label>
-					<input asp-for=MiddleName class=form-control />
-					<span asp-validation-for=MiddleName class=text-danger></span>
-				</div>
-				<div class=form-group>
 					<label asp-for=LastName class=control-label></label>
 					<input asp-for=LastName class=form-control />
 					<span asp-validation-for=LastName class=text-danger></span>
 				</div>
 				<div class=form-group>
-					<label asp-for=Email class=control-label></label>
-					<input asp-for=Email class=form-control />
-					<span asp-validation-for=Email class=text-danger></span>
+					<label asp-for=Contact class=control-label></label>
+					<input asp-for=Contact class=form-control />
+					<span asp-validation-for=Contact class=text-danger></span>
 				</div>
 				<div class=form-group>
 					<label asp-for=Age class=control-label></label>
